--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <p>Headshots Borås</p>
     <nav>
         <ul>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Prices</a></li>
-            <li><a href="#">Testimonials</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#prices">Prices</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -133,20 +133,20 @@
 <footer class="footer">
     <ul>
         <li><strong>Navigate:</strong></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Prices</a></li>
-        <li><a href="#">Testimonials</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#prices">Prices</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#contact">Contact</a></li>
     </ul>
     <ul>
         <li><strong>Contact:</strong></li>
-        <li><a href="#">070 2405083</a></li>
-        <li><a href="#">info@christiansfoto.se</a></li>
+        <li><a href="tel:0702405083">070-2405083</a></li>
+        <li><a href="mailto:info@christiansfoto.se">info@christiansfoto.se</a></li>
     </ul>
     <ul>
         <li><strong>Connect:</strong></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Instagram</a></li>
+        <li><a href="https://www.facebook.com/ChristianPersson8006">Facebook</a></li>
+        <li><a href="https://www.instagram.com/?hl=sv">Instagram</a></li>
     </ul>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
