added some media queries, more styling and other fixes

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
                 <input type="text" placeholder="Name">
                 <input type="email" placeholder="Email">
                 <textarea name="message" placeholder="Message"></textarea>
+                <input type="checkbox" name="consent" value="consent" id="checkbox" required>
+                <label for="checkbox"><a href="#">I agree to terms of use</a></label>
                 <input type="submit" value="Get in touch!"  class="button-form">
             </form>
     </section>
@@ -145,8 +147,8 @@
     </ul>
     <ul>
         <li><strong>Connect:</strong></li>
-        <li><a href="https://www.facebook.com/ChristianPersson8006">Facebook</a></li>
-        <li><a href="https://www.instagram.com/?hl=sv">Instagram</a></li>
+        <li><a href="https://www.facebook.com/ChristianPersson8006"><i class="fab fa-facebook"></i>Facebook</a></li>
+        <li><a href="https://www.instagram.com/?hl=sv"><i class="fab fa-instagram-square"></i>Instagram</a></li>
     </ul>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
