--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Christians Photo, headshots in Borås, Västra Götaland</title>
 </head>
 <body>
-<header>
+<header> <!--Header-->
     <h1>Christians Photo</h1>
     <p>Headshots Borås</p>
     <nav>
@@ -21,41 +21,41 @@
         </ul>
     </nav>
 </header>
-<section id="portfolio" class="my-portfolio">
+<section id="portfolio" class="my-portfolio"> <!--The portfolio section. I got this from Bootstrap-->
     <h2>My portfolio</h2>
     <div id="carouselExampleControls" class="carousel slide portfolio-container" data-ride="carousel">
-  <div class="carousel-inner">
+    <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/images/Adam.jpg" class="d-block w-100" alt="Image of a guy named Adam">
+    <img src="assets/images/Adam.jpg" class="d-block w-100" alt="Image of a guy named Adam">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/Andreas.jpg" class="d-block w-100" alt="Image of a guy named Andreas">
+    <img src="assets/images/Andreas.jpg" class="d-block w-100" alt="Image of a guy named Andreas">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/Lisa.jpg" class="d-block w-100" alt="Image of a woman named Lisa">
+    <img src="assets/images/Lisa.jpg" class="d-block w-100" alt="Image of a woman named Lisa">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/Joel.jpg" class="d-block w-100" alt="Image of a guy named Joel">
+    <img src="assets/images/Joel.jpg" class="d-block w-100" alt="Image of a guy named Joel">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/Matilda.jpg" class="d-block w-100" alt="Image of a woman named Matilda">
+    <img src="assets/images/Matilda.jpg" class="d-block w-100" alt="Image of a woman named Matilda">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/Neema.jpg" class="d-block w-100" alt="Image of a woman named Neema">
+    <img src="assets/images/Neema.jpg" class="d-block w-100" alt="Image of a woman named Neema">
     </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
-  </a>
-</div>
+    </a>
+    </div>
     
 </section>
-<section id="prices" >
+<section id="prices" > <!--Prices section-->
     <h2>Pricing options</h2>
     <div class="pricing-cards-container">
     <div class="pricing-card">
@@ -76,9 +76,9 @@
         <div class="pricing-card-body">
             <ul>
                 <li><strong>75</strong><i class="fas fa-euro-sign"></i></li>
-                <li>1 image</li>
-                <li>30 minutes</li>
-                <li>1 outfit</li>
+                <li>3 images</li>
+                <li>60 minutes</li>
+                <li>3 outfits</li>
             </ul>
             <button class="pricing-card-button">Book session</button>
         </div>
@@ -89,9 +89,9 @@
         <div class="pricing-card-body">
             <ul>
                 <li><strong>75</strong><i class="fas fa-euro-sign"></i></li>
-                <li>1 image</li>
-                <li>30 minutes</li>
-                <li>1 outfit</li>
+                <li>7 images</li>
+                <li>2 hours</li>
+                <li>5 outfits</li>
             </ul>
             <button class="pricing-card-button">Book session</button>
         </div>
@@ -100,7 +100,7 @@
     </div>
 </section>
 
-<section id="testimonials">
+<section id="testimonials"> <!--Section with some testimonials-->
 <h2 class="testimonials-heading">What people say</h2>
 <div class="testimonials-container">
 <div class="testimonial-card">
@@ -117,7 +117,7 @@
 </div>
 </div>
 </section>
-<section class="form-container" id="contact">
+<section class="form-container" id="contact"> <!--Contact form-->
         <h2>Get in touch</h2>
             <form name="contact-form" action="https://formdump.codeinstitute.net" method="POST" class="form">
                 <input type="text" placeholder="Name">
@@ -128,11 +128,11 @@
                 <input type="submit" value="Get in touch!"  class="button-form">
             </form>
     </section>
-    <section class="map-container">
+    <section class="map-container"> <!--A map with the studio location-->
         <h2>Studio Location</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2128.8903188594!2d12.941938815502166!3d57.75228638113504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465aa72b07460935%3A0xad92acce2e44efd9!2sNorra%20Sj%C3%B6bogatan%2034%2C%20506%2043%20Bor%C3%A5s!5e0!3m2!1ssv!2sse!4v1604152658438!5m2!1ssv!2sse" class="map" frameborder="0" style="border:0;" aria-hidden="false" tabindex="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2128.8903188594!2d12.941938815502166!3d57.75228638113504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465aa72b07460935%3A0xad92acce2e44efd9!2sNorra%20Sj%C3%B6bogatan%2034%2C%20506%2043%20Bor%C3%A5s!5e0!3m2!1ssv!2sse!4v1604152658438!5m2!1ssv!2sse" class="map" style="border:0;" aria-hidden="false" tabindex="0"></iframe>
     </section>
-<footer class="footer">
+<footer class="footer"> <!--My footer-->
     <ul>
         <li><strong>Navigate:</strong></li>
         <li><a href="#portfolio">Portfolio</a></li>
