--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
     <div id="carouselExampleControls" class="carousel slide portfolio-container" data-ride="carousel">
     <div class="carousel-inner">
     <div class="carousel-item active">
-    <img src="assets/images/Adam.jpg" class="d-block w-100" alt="Image of a guy named Adam">
+    <img src="assets/images/adam.jpg" class="d-block w-100" alt="Image of a guy named Adam">
     </div>
     <div class="carousel-item">
-    <img src="assets/images/Andreas.jpg" class="d-block w-100" alt="Image of a guy named Andreas">
+    <img src="assets/images/andreas.jpg" class="d-block w-100" alt="Image of a guy named Andreas">
     </div>
     <div class="carousel-item">
-    <img src="assets/images/Lisa.jpg" class="d-block w-100" alt="Image of a woman named Lisa">
+    <img src="assets/images/lisa.jpg" class="d-block w-100" alt="Image of a woman named Lisa">
     </div>
     <div class="carousel-item">
-    <img src="assets/images/Joel.jpg" class="d-block w-100" alt="Image of a guy named Joel">
+    <img src="assets/images/joel.jpg" class="d-block w-100" alt="Image of a guy named Joel">
     </div>
     <div class="carousel-item">
-    <img src="assets/images/Matilda.jpg" class="d-block w-100" alt="Image of a woman named Matilda">
+    <img src="assets/images/matilda.jpg" class="d-block w-100" alt="Image of a woman named Matilda">
     </div>
     <div class="carousel-item">
-    <img src="assets/images/Neema.jpg" class="d-block w-100" alt="Image of a woman named Neema">
+    <img src="assets/images/neema.jpg" class="d-block w-100" alt="Image of a woman named Neema">
     </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -72,7 +72,7 @@
        
     </div>
     <div class="pricing-card">
-        <div class="pricing-card-header">Basic</div>
+        <div class="pricing-card-header">Standard</div>
         <div class="pricing-card-body">
             <ul>
                 <li><strong>75</strong><i class="fas fa-euro-sign"></i></li>
@@ -85,7 +85,7 @@
        
     </div>
     <div class="pricing-card">
-        <div class="pricing-card-header">Basic</div>
+        <div class="pricing-card-header">Premium</div>
         <div class="pricing-card-body">
             <ul>
                 <li><strong>75</strong><i class="fas fa-euro-sign"></i></li>
@@ -104,13 +104,13 @@
 <h2 class="testimonials-heading">What people say</h2>
 <div class="testimonials-container">
 <div class="testimonial-card">
-    <img src="assets/images/Neema2.jpg" alt="Image of a woman named Neema">
+    <img src="assets/images/neema2.jpg" alt="Image of a woman named Neema">
     <div class="testimonial-body">
         <p><q>A very fun experience, and the images turned out really well!</q>-Neema Kisanga</p>
     </div>
 </div>
 <div class="testimonial-card">
-    <img src="assets/images/Andreas.jpg" alt="Image of a woman named Neema">
+    <img src="assets/images/andreas.jpg" alt="Image of a man named Andreas">
     <div class="testimonial-body">
         <p><q>I can really recommend Christian and i am so happy with the result!</q>-Andreas Edman</p>
     </div>
@@ -143,12 +143,12 @@
     <ul>
         <li><strong>Contact:</strong></li>
         <li><a href="tel:0702405083">070-2405083</a></li>
-        <li><a href="mailto:info@christiansfoto.se">info@christiansfoto.se</a></li>
+        <li><a href="mailto:info@christiansfoto.se" target="_blank">info@christiansfoto.se</a></li>
     </ul>
     <ul>
         <li><strong>Connect:</strong></li>
-        <li><a href="https://www.facebook.com/ChristianPersson8006"><i class="fab fa-facebook"></i>Facebook</a></li>
-        <li><a href="https://www.instagram.com/?hl=sv"><i class="fab fa-instagram-square"></i>Instagram</a></li>
+        <li><a href="https://www.facebook.com/ChristianPersson8006" target="_blank"><i class="fab fa-facebook"></i>Facebook</a></li>
+        <li><a href="https://www.instagram.com/?hl=sv" target="_blank"><i class="fab fa-instagram-square"></i>Instagram</a></li>
     </ul>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
