Made some bugfixes i discovered when validating the code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <title>Christians Photo, headshots in Borås, Västra Götaland</title>
   </head>
   <body>
-    
     <!--Header-->
     <header>
       <h1>Christians Photo</h1>
@@ -120,13 +119,13 @@
               <li>30 minutes</li>
               <li>1 outfit</li>
             </ul>
-            <button class="pricing-card-button">
+            <div class="pricing-card-button">
               <a
                 target="_blank"
                 href="https://app.acuityscheduling.com/schedule.php?owner=16418922&appointmentType=18192930"
                 >Book session</a
               >
-            </button>
+            </div>
           </div>
         </div>
         <div class="pricing-card">
@@ -138,13 +137,13 @@
               <li>60 minutes</li>
               <li>3 outfits</li>
             </ul>
-            <button class="pricing-card-button">
+            <div class="pricing-card-button">
               <a
                 target="_blank"
                 href="https://app.acuityscheduling.com/schedule.php?owner=16418922&appointmentType=18192948"
                 >Book session</a
               >
-            </button>
+            </div>
           </div>
         </div>
         <div class="pricing-card">
@@ -156,13 +155,13 @@
               <li>2 hours</li>
               <li>5 outfits</li>
             </ul>
-            <button class="pricing-card-button">
+            <div class="pricing-card-button">
               <a
                 target="_blank"
                 href="https://app.acuityscheduling.com/schedule.php?owner=16418922&appointmentType=18192958"
                 >Book session</a
               >
-            </button>
+            </div>
           </div>
         </div>
       </div>
@@ -227,7 +226,7 @@
       </form>
     </section>
 
-    <!--A map with the studio location-->
+    <!--A map with the studio location, copy pasted from Google maps-->
     <section class="map-container">
       <h2>Studio Location</h2>
       <iframe
