added some additional comments

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="pricing-card-header">Basic</div>
           <div class="pricing-card-body">
             <ul>
-              <li><strong>75</strong><i class="fas fa-euro-sign"></i></li>
+              <li><strong>75</strong><i class="fas fa-euro-sign"></i></li><!--Contains an euro icon from Font Awsome -->
               <li>1 image</li>
               <li>30 minutes</li>
               <li>1 outfit</li>
@@ -263,14 +263,14 @@
             href="https://www.facebook.com/ChristianPersson8006"
             target="_blank"
             ><i class="fab fa-facebook"></i>Facebook</a
-          >
+          > <!--Contains icon from Font Awsome -->
         </li>
         <li>
           <a
             href="https://www.instagram.com/christiansfoto8006/?hl=sv"
             target="_blank"
             ><i class="fab fa-instagram-square"></i>Instagram</a
-          >
+          > <!--Contains icon from Font Awsome -->
         </li>
       </ul>
     </footer>
