--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Font Awsome-->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
+    <!--Bootstrap-->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -132,7 +134,7 @@
           <div class="pricing-card-header">Standard</div>
           <div class="pricing-card-body">
             <ul>
-              <li><strong>150</strong><i class="fas fa-euro-sign"></i></li>
+              <li><strong>150</strong><i class="fas fa-euro-sign"></i></li><!--Contains an euro icon from Font Awsome -->
               <li>3 images</li>
               <li>60 minutes</li>
               <li>3 outfits</li>
@@ -150,7 +152,7 @@
           <div class="pricing-card-header">Premium</div>
           <div class="pricing-card-body">
             <ul>
-              <li><strong>250</strong><i class="fas fa-euro-sign"></i></li>
+              <li><strong>250</strong><i class="fas fa-euro-sign"></i></li><!--Contains an euro icon from Font Awsome -->
               <li>7 images</li>
               <li>2 hours</li>
               <li>5 outfits</li>
@@ -263,17 +265,18 @@
             href="https://www.facebook.com/ChristianPersson8006"
             target="_blank"
             ><i class="fab fa-facebook"></i>Facebook</a
-          > <!--Contains icon from Font Awsome -->
+          > <!--The code above contains an icon from Font Awsome -->
         </li>
         <li>
           <a
             href="https://www.instagram.com/christiansfoto8006/?hl=sv"
             target="_blank"
             ><i class="fab fa-instagram-square"></i>Instagram</a
-          > <!--Contains icon from Font Awsome -->
+          > <!--The code above contains an icon from Font Awsome -->
         </li>
       </ul>
     </footer>
+    <!--Bootstrap-->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
